environments/dev/apps/app-my-first-kafka-service/services/my-first-kafka-service/base/config/200-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: my-first-kafka-service
    app.kubernetes.io/part-of: app-my-first-kafka-service
  name: my-first-kafka-service
  namespace: dev
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: my-first-kafka-service
    app.kubernetes.io/part-of: app-my-first-kafka-service
status:
  loadBalancer: {}
