environments/dev/apps/app-my-first-kafka-service/services/my-first-kafka-service/base/config/300-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: my-first-kafka-service
  namespace: dev
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: my-first-kafka-service
    weight: 100
  wildcardPolicy: None
